Added rough python code for univariate linear regression ML algorithms, csv support